--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyssa-sands-photography",
-  "homepage": "http://anyssasands.com/",
+  "homepage": "https://anyssasands.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
